Fix failing transferToImageBitmap layout tests and commit pixel test on Mac

Right now these two tests:
fast/canvas/webgl/offscreenCanvas-transferToImageBitmap.html
fast/canvas/webgl/offscreenCanvas-transferToImageBitmap-in-worker.html
are not working properly on Mac if we drag them to the browser. And the
reason is that DrawingBuffer()'s transferToStaticImage() returns a
StaticBitmapImage that is always black because the WebGLImageChromium
flag is enabled.

This CL disable this flag when creating a DrawingBuffer() inside the
WebGLRenderingContextBase's constructor, if the creation is requested
by a offscreenCanvas.

This change will also fix the failure of gpu pixel test for commit() on
Mac because commit() method depends on DrawingBuffer()'s transferToStaticImage()
as well.

Moreover, since the layout test doesn't really compare the composited
result, we should probably turn the above two layout tests into pixel
tests.

BUG=649668
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.win:win_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2365653005
Cr-Commit-Position: refs/heads/master@{#421181}

Former-commit-id: 3ca72b27d628adf45c298f313869f7b20a7e83aa